--- a/ReferenceLibrary/ReferenceLibrary.csproj
+++ b/ReferenceLibrary/ReferenceLibrary.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{060769CD-D844-41F6-9742-168A1A8F8BDE}</ProjectGuid>
+    <ProjectGuid>{850732B3-99E9-4DAC-8BFA-5A5F132F8646}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>iCat.Generate.Service</RootNamespace>
-    <AssemblyName>iCat.Generate.Service</AssemblyName>
+    <RootNamespace>ReferenceLibrary</RootNamespace>
+    <AssemblyName>ReferenceLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,26 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ColumnsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Foundation.Core\Foundation.Core.csproj">
-      <Project>{398b7fee-94cd-4f66-a5b4-180f8e443c83}</Project>
-      <Name>Foundation.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\iCat.Generate.IDao\iCat.Generate.IDao.csproj">
-      <Project>{841981b4-02c3-4307-abad-4085b2504e93}</Project>
-      <Name>iCat.Generate.IDao</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\iCat.Generate.IService\iCat.Generate.IService.csproj">
-      <Project>{a516e39d-7ea6-45a9-a978-1ec39a78dac6}</Project>
-      <Name>iCat.Generate.IService</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\iCat.Generate.Model\iCat.Generate.Model.csproj">
-      <Project>{cc9436b2-96d3-42b7-ae03-aaf3a37b7d78}</Project>
-      <Name>iCat.Generate.Model</Name>
-    </ProjectReference>
+    <Content Include="Common.Logging.dll" />
+    <Content Include="nunit.framework.dll" />
+    <Content Include="Spring.Aop.dll" />
+    <Content Include="Spring.Core.dll" />
+    <Content Include="Spring.Data.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
