--- a/iCat.Generate.ServiceTest/App.config
+++ b/iCat.Generate.ServiceTest/App.config
@@ -10,7 +10,7 @@
   <spring>
     <context>
       <resource uri="DBConfig.xml"></resource>
-      <resource uri="DIUserConfig.xml"></resource>
+      <resource uri="DIConfig.xml"></resource>
     </context>
   </spring>
 </configuration>
