IDao和Model代码生成

--- a/iCat.Generate.ServiceTest/iCat.Generate.ServiceTest.csproj
+++ b/iCat.Generate.ServiceTest/iCat.Generate.ServiceTest.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestServiceColumns.cs" />
+    <Compile Include="TestServiceFileModel.cs" />
+    <Compile Include="TestServiceFileIDao.cs" />
     <Compile Include="TestServiceFileDao.cs" />
   </ItemGroup>
   <ItemGroup>
