--- a/iCat.Generate.Service/iCat.Generate.Service.csproj
+++ b/iCat.Generate.Service/iCat.Generate.Service.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColumnsService.cs" />
+    <Compile Include="GenFileModelService.cs" />
+    <Compile Include="GenFileIDaoService.cs" />
     <Compile Include="GenFileDaoService.cs" />
     <Compile Include="GenFileServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
