--- a/iCat.Generate.IDao/iCat.Generate.IDao.csproj
+++ b/iCat.Generate.IDao/iCat.Generate.IDao.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IColumnsDao.cs" />
+    <Compile Include="ITableDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
