--- a/iCat.Generate.Dao/iCat.Generate.Dao.csproj
+++ b/iCat.Generate.Dao/iCat.Generate.Dao.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="ColumnsDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableDao.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CustomSpring.Core\CustomSpring.Core.csproj">
