生成项目文件、解决方案文件

--- a/ReferenceLibrary/ReferenceLibrary.csproj
+++ b/ReferenceLibrary/ReferenceLibrary.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Common.Logging.dll" />
+    <Content Include="DevExpress.OfficeSkins.v10.2.dll" />
     <Content Include="nunit.framework.dll" />
     <Content Include="Spring.Aop.dll" />
     <Content Include="Spring.Core.dll" />
