--- a/iCat.Generate.Model/iCat.Generate.Model.csproj
+++ b/iCat.Generate.Model/iCat.Generate.Model.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="data\ConnectionsData.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="data\TablesData.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -49,6 +52,7 @@
     <Compile Include="entity\Copyright.cs" />
     <Compile Include="entity\DBStructure.cs" />
     <Compile Include="entity\Namespace.cs" />
+    <Compile Include="entity\Project.cs" />
     <Compile Include="entity\TableStructure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
