--- a/CustomSpring.Core/CustomSpring.Core.csproj
+++ b/CustomSpring.Core/CustomSpring.Core.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App\SpringManager.cs" />
     <Compile Include="Dao\BaseDao.cs" />
     <Compile Include="Dao\SQLCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -55,6 +56,7 @@
       <Name>Foundation.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
