--- a/iCat.Generate.IDao/iCat.Generate.IDao.csproj
+++ b/iCat.Generate.IDao/iCat.Generate.IDao.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IColumnsDao.cs" />
+    <Compile Include="IConnect.cs" />
+    <Compile Include="IDBDao.cs" />
     <Compile Include="ITableDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
