--- a/iCat.Generate.Service/iCat.Generate.Service.csproj
+++ b/iCat.Generate.Service/iCat.Generate.Service.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColumnsService.cs" />
+    <Compile Include="DBService.cs" />
     <Compile Include="GenFileIServiceService.cs" />
     <Compile Include="GenFileModelDataService.cs">
       <SubType>Code</SubType>
