--- a/iCat.Generate.Dao/iCat.Generate.Dao.csproj
+++ b/iCat.Generate.Dao/iCat.Generate.Dao.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColumnsDao.cs" />
+    <Compile Include="DBDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableDao.cs" />
   </ItemGroup>
