--- a/iCat.Generate.IService/iCat.Generate.IService.csproj
+++ b/iCat.Generate.IService/iCat.Generate.IService.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IColumnsService.cs" />
+    <Compile Include="IDBService.cs" />
     <Compile Include="IFileCreatorService.cs" />
     <Compile Include="IProjectCreatorService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
