--- a/iCat.Generate.Model/iCat.Generate.Model.csproj
+++ b/iCat.Generate.Model/iCat.Generate.Model.csproj
@@ -54,6 +54,7 @@
     <Compile Include="entity\DBStructure.cs" />
     <Compile Include="entity\Namespace.cs" />
     <Compile Include="entity\Project.cs" />
+    <Compile Include="entity\SpringConfig.cs" />
     <Compile Include="entity\TableStructure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
