--- a/iCatGenerator/iCatGenerator.csproj
+++ b/iCatGenerator/iCatGenerator.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A79D59AB-0F96-40AC-979F-29B66F5266F7}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>iCatGenerator</RootNamespace>
     <AssemblyName>iCatGenerator</AssemblyName>
@@ -74,6 +74,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpringKeys.cs" />
     <EmbeddedResource Include="frmGenInfor.resx">
       <DependentUpon>frmGenInfor.cs</DependentUpon>
     </EmbeddedResource>
