--- a/iCatGenerator/App.config
+++ b/iCatGenerator/App.config
@@ -9,8 +9,8 @@
 
   <spring>
     <context>
-      <resource uri="DBConfig.xml"></resource>
-      <resource uri="DIConfig.xml"></resource>
+      <resource uri="~/DBConfig.xml"></resource>
+      <resource uri="~/DIConfig.xml"></resource>
     </context>
   </spring>
 </configuration>
