添加获取命令行服务

--- a/iCat.Generate.IService/iCat.Generate.IService.csproj
+++ b/iCat.Generate.IService/iCat.Generate.IService.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ICmdService.cs" />
     <Compile Include="IColumnsService.cs" />
     <Compile Include="IDBService.cs" />
     <Compile Include="IFileCreatorService.cs" />
