--- a/iCat.Generate.Service/iCat.Generate.Service.csproj
+++ b/iCat.Generate.Service/iCat.Generate.Service.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ColumnsService.cs" />
     <Compile Include="DBService.cs" />
     <Compile Include="GenClientAppService.cs" />
+    <Compile Include="GenFileDBMappingService.cs" />
     <Compile Include="GenFileIServiceService.cs" />
     <Compile Include="GenFileModelDataService.cs">
       <SubType>Code</SubType>
